made content inside hero-info in the header display at the right side of the screen. added margin to the greetings card on th right side, 20% on slightly larger screen and 11% on tablet size and above. did this in 2 steps to avoid a huge jump on screen size change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,7 @@ header {
 
 #hero-info {
   height: 600px;
+  background: purple;
 }
 
 #greetings {
@@ -289,13 +290,48 @@ footer {
   grid-area: footer;
 }
 
+#footer-container{
+    min-height: 12em;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-end;
+    background:  green;
+}
+
+.social-links{
+    width: 15em;
+    justify-content: space-around;
+    margin: 2em;
+}
+
 .social-links a{
-    color: white;
+    color: pink;
     font-size: 2.2em;
 }
 
+#copyrights {
+    margin: 2em;
+    font-size: 0.8em;
+    color: pink; 
+}
+
 @media only screen and (min-width: 580px) {
-  #newsletter-info {
+/* header section */
+    #hero-info{
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
+    #greetings {
+        margin-right: 20%;
+    }
+
+    .tiny-screen {
+        display: none;
+    }
+ 
+/* join section */
+    #newsletter-info {
     width: 100%;
     padding: 2em;
   }
@@ -306,6 +342,12 @@ footer {
 }
 
 @media only screen and (min-width: 740px) {
+/* header section */
+#greetings {
+    margin-right: 11%;
+}
+
+/* about section */
   #about-box {
     background-color: lightblue;
     min-height: 800px;
@@ -313,7 +355,7 @@ footer {
   #about-text {
     width: 40%;
   }
-
+/* join section */
   #newsletter-info {
     width: 100%;
   }
